--- a/c.html
+++ b/c.html
@@ -12,7 +12,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <title>CodeShum Quickie Practice Problems</title>
     <meta name="title"
         content="CodeShum Quickie Practice Problems" />
     <meta name="description"
@@ -42,13 +41,108 @@
 </head>
 
 <body class="bg-gray-00 text-white">
-    <header class="bg-gray-800 p-3">
-        <div class="container mx-auto flex flex-wrap items-center justify-center lg:justify-between">
-            <div class="flex-1">
-                <a href="index.html"
-                    class="btn btn-ghost text-xl">Code Shum Quickie</a>
+
+    <div class="drawer">
+        <input id="my-drawer-3"
+            type="checkbox"
+            class="drawer-toggle" />
+        <div class="drawer-content flex flex-col">
+            <div class="w-full navbar bg-base-300">
+                <div class="flex-none lg:hidden">
+                    <label for="my-drawer-3"
+                        aria-label="open sidebar"
+                        class="btn btn-square btn-ghost">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            class="inline-block w-6 h-6 stroke-current">
+                            <path stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h16"></path>
+                        </svg>
+                    </label>
+                </div>
+                <div class="flex-1 px-2 mx-2"><a href="index.html"
+                        class="btn btn-ghost text-xl">Code Shum Quickie</a></div>
+                <div class="flex-none hidden lg:block">
+                    <ul class="menu menu-horizontal">
+                        <li><a href="c.html"
+                                class="btn btn-ghost text-white">C</a></li>
+                        <li><a href="cpp.html"
+                                class="btn btn-ghost text-white">C++</a></li>
+                        <li><a href="csharp.html"
+                                class="btn btn-ghost text-white">C#</a></li>
+                        <li><a href="java.html"
+                                class="btn btn-ghost text-white">Java</a></li>
+                        <li><a href="python.html"
+                                class="btn btn-ghost text-white">Python</a></li>
+                        <li><a href="web.html"
+                                class="btn btn-ghost text-white">WEB</a></li>
+                        <li><a href="sql.html"
+                                class="btn btn-ghost text-white">MySQL</a></li>
+                    </ul>
+                </div>
             </div>
-            <ul class="nav w-full lg:w-auto flex justify-center lg:justify-start space-x-4">
+            <div>
+                <div class="hero bg-base-200 mb-4"
+                    style="background-image: url(assets/img/bg.gif);"
+                    id="hero">
+                    <div class="hero-overlay bg-opacity-50"></div>
+                    <div class="hero-content flex-col lg:flex-row-reverse">
+                        <img src="assets\img\c.png"
+                            class="max-w-sm rounded-lg shadow-1xl" />
+                        <div>
+                            <h1 class="text-5xl font-bold">C Language Practice Problems</h1>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container mx-auto text-center">
+                    <div class="mx-4">
+                        <div role="alert"
+                            class="alert">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                fill="none"
+                                viewBox="0 0 24 24"
+                                class="stroke-current shrink-0 w-6 h-6">
+                                <path stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-width="2"
+                                    d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                            </svg>
+                            <span>You need to be logged in to Codechum for the redirections to work properly.
+                                <br>
+                                <span class="text-warning">Note: You need to select the Language C on the TOP RIGHT
+                                    corner of the
+                                    CodeChum Editor.</span>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="search-bar m-4">
+                        <input type="text"
+                            id="searchInput"
+                            placeholder="Search topics..."
+                            class="input input-bordered w-full" />
+                    </div>
+
+                    <div class="grid grid-cols-1 lg:grid-cols-3 mx-4 gap-4"
+                        id="content">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="drawer-side">
+            <label for="my-drawer-3"
+                aria-label="close sidebar"
+                class="drawer-overlay"></label>
+            <ul class="menu p-4 w-80 min-h-full bg-base-200">
+                <li><a href="index.html"
+                        class="btn btn-ghost text-white text-xl">Code Shum Quickie</a></li>
+                <div class="divider">
+                    Language
+                </div>
                 <li><a href="c.html"
                         class="btn btn-ghost text-white">C</a></li>
                 <li><a href="cpp.html"
@@ -65,137 +159,53 @@
                         class="btn btn-ghost text-white">MySQL</a></li>
             </ul>
         </div>
-    </header>
-
-    <div class="hero bg-base-200 mb-4">
-        <div class="hero-content flex-col lg:flex-row-reverse">
-            <img src="assets\img\c.png"
-                class="max-w-sm rounded-lg shadow-1xl" />
-            <div>
-                <h1 class="text-5xl font-bold">C Language Practice Problems</h1>
-            </div>
-        </div>
     </div>
 
-    <div class="container mx-auto text-center">
-        <div class="mx-4">
-            <div role="alert"
-                class="alert">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    class="stroke-current shrink-0 w-6 h-6">
-                    <path stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="2"
-                        d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                </svg>
-                <span>You need to be logged in to Codechum for the redirections to work properly.</span>
-            </div>
-        </div>
-
-        <div class="grid grid-cols-1 lg:grid-cols-2"
-            id="content">
-        </div>
-
-        <div class="m-4">
-            <div class="join grid grid-cols-2">
-                <a href="index.html"
-                    class="join-item btn btn-outline me-2">Home Page</a>
-                <a href="cpp.html"
-                    class="join-item btn btn-outline">C++</a>
-            </div>
-        </div>
-    </div>
-
-    <footer class="py-3 my-4 text-center text-gray-400">
-        <p>© 2024 CodeShum Quickie</p>
+    <footer class="footer footer-center  bg-base-200  p-10 mt-4">
+        <aside>
+            <p class="font-bold">
+                © 2024 CodeShum Quickie
+            </p>
+            <p class="text-neutral-content">Data Disclaimer: The information herein is gathered from publicly
+                available
+                data on
+                codechum.com and is
+                not hosted on
+                this website. Accuracy cannot be guaranteed. Use at your own discretion. We hold no liability for its
+                use.</p>
+            <a class="text-primary w-bold"
+                href="https://github.com/Kintoyyy/CodeShum-Quickie-Problems">Kintoyyy/CodeShum-Quickie-Problems</a>
+        </aside>
     </footer>
 
     <script src="./assets/data/c/prog_1.js"></script>
     <script src="./assets/data/c/prog_2.js"></script>
     <script src="./assets/data/c/data_strct.js"></script>
     <script src="./assets/data/c/csit122.js"></script>
+    <script src="script.js"></script>
     <script>
         $(document).ready(function () {
-
-            const data = [
+            const cleanData = cleanCourseData([
                 prog_1,
                 prog_2,
                 data_strct,
                 csit122
-            ];
-
-            let idSet = new Set();
-            let nameSet = new Set();
-
-            const cleanData = data.map(course => {
-                const cleanedLessons = course.university_lessons.map(lesson => {
-                    const filteredTopics = lesson.university_topics.filter(topic => {
-                        if (!idSet.has(topic.id) && !nameSet.has(topic.name)) {
-                            idSet.add(topic.id);
-                            nameSet.add(topic.name);
-                            return true;
-                        }
-                        return false;
-                    });
-
-                    filteredTopics.sort((a, b) => a.name.localeCompare(b.name));
-
-                    return {
-                        ...lesson,
-                        university_topics: filteredTopics
-                    };
-                }).filter(lesson => lesson.university_topics.length > 0);
-
-                return {
-                    ...course,
-                    university_lessons: cleanedLessons
-                };
+            ]);
+            renderContent(cleanData);
+            $('#searchInput').on('input', function () {
+                const query = $(this).val().toLowerCase();
+                const filteredData = filterCourseData(cleanData, query);
+                renderContent(filteredData);
             });
 
-            let contentHTML = "";
-
-            $.each(cleanData, function (index, course) {
-                $.each(course.university_lessons, function (index, category) {
-                    let accordions = "";
-
-
-                    $.each(category.university_topics, function (i, topic) {
-                        if (topic.practice_problems.length !== 0) {
-                            let links = topic.practice_problems.map(function (problem) {
-                                return `<a class="btn m-1 btn-outline" target="_blank" href="https://citu.codechum.com/student/study-area/${problem.id}">${problem.name}</a>`;
-                            }).join("");
-
-                            accordions += `<div class="collapse collapse-arrow rounded-box bg-base-100">
-                                <input type="checkbox" id="acc${topic.id}">
-                                <div class="collapse-title text-xl font-medium">${topic.name} <span class="badge badge-ghost">${topic.practice_problems.length} Items</span></div>
-                                <div class="collapse-content">
-                                    <ul class="list-disc ml-5">
-                                        ${links}
-                                    </ul>
-                                </div>
-                            </div>`;
-                        }
-                    });
-
-                    if (accordions) {
-                        contentHTML += `
-                        <div class="card bg-base-200 shadow-xl m-4">
-                            <div class="card-body">
-                                <div class="divider text-4xl">
-                                    ${category.name}
-                                </div>
-                                ${accordions}
-                            </div>
-                        </div>
-                        `;
-                    }
-                });
+            $(document).on('click', '.suggestion-item', function () {
+                const suggestion = $(this).text();
+                $('#searchInput').val(suggestion);
+                const filteredData = filterCourseData(cleanData, suggestion, true);
+                renderContent(filteredData);
             });
-
-            $('#content').html(contentHTML);
         });
+
     </script>
 </body>
 
