--- a/index.html
+++ b/index.html
@@ -5,49 +5,52 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-    <title>CodeShum Quickie Links</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-        rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@1.14.0/dist/full.css"
-        rel="stylesheet">
+    <title>CodeShum Quickie - Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.11.1/dist/full.min.css"
+        rel="stylesheet"
+        type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <meta name="title"
+        content="CodeShum Quickie Practice Problems" />
+    <meta name="description"
+        content="CodeShum Quickie is a directory of practice problems from CodeChum. Access publicly available problems directly. We do not host any content on our site." />
+
+    <meta property="og:type"
+        content="website" />
+    <meta property="og:url"
+        content="https://kintoyyy.github.io/CodeShum-Quickie-Problems/" />
+    <meta property="og:title"
+        content="CodeShum Quickie Practice Problems" />
+    <meta property="og:description"
+        content="CodeShum Quickie is a directory of practice problems from CodeChum. Access publicly available problems directly. We do not host any content on our site." />
+    <meta property="og:image"
+        content="https://kintoyyy.github.io/CodeShum-Quickie-Problems/assets/img/meta.png" />
+
+    <meta property="twitter:card"
+        content="summary_large_image" />
+    <meta property="twitter:url"
+        content="https://kintoyyy.github.io/CodeShum-Quickie-Problems/" />
+    <meta property="twitter:title"
+        content="CodeShum Quickie Practice Problems" />
+    <meta property="twitter:description"
+        content="CodeShum Quickie is a directory of practice problems from CodeChum. Access publicly available problems directly. We do not host any content on our site." />
+    <meta property="twitter:image"
+        content="https://kintoyyy.github.io/CodeShum-Quickie-Problems/assets/img/meta.png" />
 </head>
 
-<body class="bg-gray-900 text-white">
-    <header class="bg-gray-800 p-3">
-        <div class="container mx-auto flex flex-wrap items-center justify-center lg:justify-between">
-            <div class="flex-1">
-                <a href="index.html"
-                    class="btn btn-ghost text-xl">Code Shum Quickie</a>
-            </div>
-            <ul class="nav w-full lg:w-auto flex justify-center lg:justify-start space-x-4">
-                <li><a href="c.html"
-                        class="btn btn-ghost text-white">C</a></li>
-                <li><a href="cpp.html"
-                        class="btn btn-ghost text-white">C++</a></li>
-                <li><a href="csharp.html"
-                        class="btn btn-ghost text-white">C#</a></li>
-                <li><a href="java.html"
-                        class="btn btn-ghost text-white">Java</a></li>
-                <li><a href="python.html"
-                        class="btn btn-ghost text-white">Python</a></li>
-                <li><a href="web.html"
-                        class="btn btn-ghost text-white">WEB</a></li>
-                <li><a href="sql.html"
-                        class="btn btn-ghost text-white">MySQL</a></li>
-            </ul>
-        </div>
-    </header>
+<body class="bg-gray-00 text-white">
 
     <div class="hero min-h-screen"
-        style="background-image: url(assets/img/background.jpg);">
+        style="background-image: url(assets/img/bg.gif);">
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-center text-neutral-content">
             <div class="max-w-md">
-                <h1 class="text-5xl font-bold">CODESHUM QUICKIE LINKS</h1>
+                <h1 class="text-primary font-bold text-5xl">CODESHUM QUICKIE LINKS</h1>
                 <p class="py-6">Login to your CodeShum before opening the links!</p>
 
-                <div class="mockup-code mb-3 w-[400px]">
+                <div class="mockup-code mb-3">
                     <pre data-prefix="$"><code>scrap-website --url "codeshum.com"</code></pre>
                     <pre data-prefix=">"
                         class="text-warning"><code>Scraping website...</code></pre>
@@ -59,15 +62,26 @@
                         class="text-success"><code>Done! Enjoy free CodeShum Problems</code></pre>
                 </div>
 
-
+                <div class="divider divider-neutral font-bold ">Select Language</div>
                 <a href="c.html"
-                    class="btn btn-primary">Get Started</a>
+                    class="btn btn-outline btn-primary rounded-full btn-sm">C</a>
+                <a href="cpp.html"
+                    class="btn btn-outline btn-primary rounded-full btn-sm">C++</a>
+                <a href="csharp.html"
+                    class="btn btn-outline btn-primary rounded-full btn-sm">C#</a>
+                <a href="java.html"
+                    class="btn btn-outline btn-primary rounded-full btn-sm">Java</a>
+                <a href="python.html"
+                    class="btn btn-outline btn-primary rounded-full btn-sm">Python</a>
+                <a href="web.html"
+                    class="btn btn-outline btn-primary rounded-full btn-sm">WEB</a>
+                <a href="sql.html"
+                    class="btn btn-outline btn-primary rounded-full btn-sm">MYSQL</a>
             </div>
         </div>
     </div>
 </body>
 
-<!-- Google tag (gtag.js) -->
 <script async
     src="https://www.googletagmanager.com/gtag/js?id=G-0XZTG255FL"></script>
 <script>
