added web and mysql

--- a/python.html
+++ b/python.html
@@ -91,7 +91,7 @@
                     <div class="hero-overlay bg-opacity-50"></div>
                     <div class="hero-content flex-col lg:flex-row-reverse">
                         <img src="assets\img\python.png"
-                            class="max-w-sm rounded-lg shadow-1xl" />
+                            class="w-[300px] rounded-lg shadow-1xl" />
                         <div>
                             <h1 class="text-5xl font-bold">Python Language Practice Problems</h1>
                         </div>
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="grid grid-cols-1 lg:grid-cols-3 mx-4 gap-4"
-                        id="content">
+                        id="content">No Problems Available
                     </div>
                 </div>
             </div>
