--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
                     class="btn btn-outline btn-primary rounded-full btn-sm">WEB</a>
                 <a href="sql.html"
                     class="btn btn-outline btn-primary rounded-full btn-sm">MYSQL</a>
+                <a href="tasm_art.html"
+                    class="btn btn-outline btn-primary rounded-full btn-sm">TASM ART GEN</a>
             </div>
         </div>
     </div>
