--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a href="sql.html"
                     class="btn btn-outline btn-primary rounded-full btn-sm">MYSQL</a>
                 <a href="tasm_art.html"
-                    class="btn btn-outline btn-primary rounded-full btn-sm">TASM ART GEN</a>
+                    class="btn btn-outline btn-secondary rounded-full btn-sm">TASM ART GEN</a>
             </div>
         </div>
     </div>
