--- a/tasm_art.html
+++ b/tasm_art.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
-    <title>CodeShum Quickie - C Language</title>
+    <title>CodeShum Quickie - Tasm Art Generator</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.11.1/dist/full.min.css"
         rel="stylesheet"
         type="text/css" />
